Some UI changes

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css');
 
-* {
+#habobba {
+    z-index: 400;
+    user-select: none;
+    pointer-events: all;
     font-family: Montserrat, sans-serif;
     text-rendering: optimizeLegibility;
 }
